# txmanifest-wallet

./: .gitignore  Cargo.toml  LICENSE-MIT  MIGRATION-compile_params-to-instance.md  README.md
.github/workflows/: release.yml
examples/last_will/: last_will.simf  params.json  txmanifest.json
examples/lending/: asset_auth.simf  lending.simf  p2pk.simf  pre_lock.simf  script_auth.simf  txmanifest.json
examples/p2pk/: p2pk.simf  txmanifest.json
examples/zeroconf/: txmanifest.json
txmanifest_lib/: Cargo.toml
txmanifest_lib/src/: backend.rs  config.rs  context.rs  covenant.rs  describe.rs  eval.rs  instance.rs  lib.rs  lifecycle.rs  manifest.rs  params.rs  prepare.rs  prompt.rs  pset_builder.rs  state.rs  validate.rs  wallet.rs
txmanifest_wallet/: Cargo.toml
txmanifest_wallet/src/: main.rs
