[package]
name = "tx-manifest-wallet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Wallet CLI for executing transaction manifests on Liquid/Elements with SimplicityHL covenants."
repository = "https://github.com/stringhandler/manifest-wallet"

[dependencies]
tx-manifest-lib = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dialoguer = "0.11"
console = "0.15"
lwk_wollet = "0.9"
lwk_common = "0.9"

[features]
default = []
# Forwards to tx-manifest-lib/simplicity_eval — enables the custom SimplicityHL
# compile_function / expression-eval code paths (not in upstream master).
simplicity_eval = ["tx-manifest-lib/simplicity_eval"]
